testdata/invalid/range_invalid_02.lisp
;;error:3:15-16:malformed bound
(defcolumns (X :i16) (Y :i16))
(definrange X Y)
